--- a/HTMLmultistep.html
+++ b/HTMLmultistep.html
@@ -42,7 +42,7 @@
 
 
     <form id="Form3">
-        <h3>INFORMACION DE DESPACHO</h3>
+        <h3>INFORMACION PARA DESPACHO</h3>
         <input type="text" id="calle" placeholder="Calle">
         <input type="text" id="comuna" placeholder="Comuna">
         <input type="text" id="ciudad" placeholder="Ciudad">
