--- a/HTMLmultistep.html
+++ b/HTMLmultistep.html
@@ -45,7 +45,7 @@
         <h3>INFORMACION PARA DESPACHO</h3>
         <input type="text" id="calle" placeholder="Calle">
         <input type="text" id="comuna" placeholder="Comuna">
-        <input type="text" id="ciudad" placeholder="Ciudad">
+        <input type="text" id="ciudad" placeholder="Dirección">
 
         <div class="btn-box">
             <button type="button" id="Back2">Atras</button>
