--- a/HTMLmultistep.html
+++ b/HTMLmultistep.html
@@ -17,7 +17,7 @@
 
 
     <form id="Form1">
-        <h3>CREAR NUEVA CUENTA</h3>
+        <h3>REGISTRO DE DATOS</h3>
         <input type="email" id="email"   placeholder="Email">
         <input type="password" id="pass" name="pass" placeholder="Contraseña">
         <input type="password" id="passconfirm" name="passconfirm" placeholder="Confirme Contraseña">
